[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/debugger/styles/Theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/debugger/panels/ConsolePanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/debugger/panels/Debugger.gd" type="Script" id=3]
[ext_resource path="res://addons/debugger/panels/StatsPanel.tscn" type="PackedScene" id=4]

[node name="Debugger" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
footer = "Debugger Tool"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128
script = null

[node name="Container" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="PanelContainer" parent="CanvasLayer/Container"]
offset_right = 960.0
offset_bottom = 49.0
script = null

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Container/Header"]
offset_left = 10.5
offset_top = 7.0
offset_right = 949.5
offset_bottom = 42.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.0980392 )
script = null

[node name="Menubar" type="HBoxContainer" parent="CanvasLayer/Container/Header"]
offset_left = 10.5
offset_top = 7.0
offset_right = 949.5
offset_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideLocked" type="CheckBox" parent="CanvasLayer/Container/Header/Menubar"]
offset_left = 439.0
offset_right = 553.0
offset_bottom = 35.0
text = "Hide Locked"
flat = true
script = null

[node name="ShowStats" type="CheckBox" parent="CanvasLayer/Container/Header/Menubar"]
offset_left = 563.0
offset_right = 666.0
offset_bottom = 35.0
pressed = true
text = "Show Stats"
flat = true
script = null

[node name="ShowConsole" type="CheckBox" parent="CanvasLayer/Container/Header/Menubar"]
offset_left = 676.0
offset_right = 799.0
offset_bottom = 35.0
text = "Show Console"
flat = true
script = null

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Container/Header/Menubar"]
offset_left = 809.0
offset_right = 829.0
offset_bottom = 35.0
rect_min_size = Vector2( 20, 0 )
script = null

[node name="PanelList" type="OptionButton" parent="CanvasLayer/Container/Header/Menubar"]
offset_left = 839.0
offset_right = 939.0
offset_bottom = 35.0
rect_min_size = Vector2( 100, 12 )
size_flags_vertical = 3
flat = true
items = [  ]
script = null

[node name="Viewport" type="HSplitContainer" parent="CanvasLayer/Container"]
offset_top = 56.0
offset_right = 960.0
offset_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 786
script = null

[node name="Left" type="VSplitContainer" parent="CanvasLayer/Container/Viewport"]
offset_right = 925.0
offset_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 180
script = null

[node name="Top" type="PanelContainer" parent="CanvasLayer/Container/Viewport/Left"]
offset_right = 925.0
offset_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = null

[node name="StatsPanel" parent="CanvasLayer/Container/Viewport/Left/Top" instance=ExtResource( 4 )]
offset_left = 10.5
offset_top = 7.0
offset_right = 914.5
offset_bottom = 375.0
size_flags_horizontal = 1
size_flags_vertical = 1
structured_text_bidi_override_options = [  ]

[node name="Bottom" type="PanelContainer" parent="CanvasLayer/Container/Viewport/Left"]
offset_top = 396.0
offset_right = 925.0
offset_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = null

[node name="ConsolePanel" parent="CanvasLayer/Container/Viewport/Left/Bottom" instance=ExtResource( 2 )]
offset_left = 10.5
offset_top = 7.0
offset_right = 914.5
offset_bottom = 41.0
theme = ExtResource( 1 )

[node name="Right" type="PanelContainer" parent="CanvasLayer/Container/Viewport"]
offset_left = 939.0
offset_right = 960.0
offset_bottom = 444.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = null

[node name="Footer" type="HBoxContainer" parent="CanvasLayer/Container"]
offset_top = 507.0
offset_right = 960.0
offset_bottom = 540.0
script = null

[node name="MarginStart" type="MarginContainer" parent="CanvasLayer/Container/Footer"]
offset_bottom = 33.0
script = null

[node name="Label" type="Label" parent="CanvasLayer/Container/Footer"]
offset_left = 7.0
offset_right = 953.0
offset_bottom = 33.0
rect_min_size = Vector2( 0, 13 )
size_flags_horizontal = 3
text = "Debugger Tool"
align = 1
valign = 1
structured_text_bidi_override_options = [  ]
script = null

[node name="MarginEnd" type="MarginContainer" parent="CanvasLayer/Container/Footer"]
offset_left = 960.0
offset_right = 960.0
offset_bottom = 33.0
script = null

[connection signal="toggled" from="CanvasLayer/Container/Header/Menubar/HideLocked" to="." method="_on_HideLocked_toggled"]
[connection signal="toggled" from="CanvasLayer/Container/Header/Menubar/ShowStats" to="." method="_on_HideStats_toggled"]
[connection signal="toggled" from="CanvasLayer/Container/Header/Menubar/ShowConsole" to="." method="_on_ShowConsole_toggled"]
[connection signal="item_selected" from="CanvasLayer/Container/Header/Menubar/PanelList" to="." method="_on_List_item_selected"]
